package game.npc;

public abstract class AbstractSeller implements Npc{

}
