package game.npc;

public class Warrior extends AbstractWarrior {

}
