package game.word.impl;

import game.word.Person;

public class PersonImpl implements Person {

}
