package game.word.impl;

import game.word.Position;

public class PositionImpl implements Position {

}
